@@ -15,7 +15,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Maps types of claims values {@link ClaimTypesConstants} to jurisdiction codes {@link JurisdictionCodesConstants}.
@@ -59,7 +58,7 @@ public class JurisdictionCodesMapper {
         return uniqueJurCodes.stream()
             .filter(Objects::nonNull)
             .map(this::toJurCodesTypeItem)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<String> retrieveDiscriminationCodes(Et1CaseData data) {
@@ -69,7 +68,7 @@ public class JurisdictionCodesMapper {
         }
         return data.getClaimantRequests().getDiscriminationClaims().stream()
             .map(JURISDICTION_CODES::get)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<String> retrievePaymentCodes(Et1CaseData data) {
@@ -78,7 +77,7 @@ public class JurisdictionCodesMapper {
         }
         return data.getClaimantRequests().getPayClaims().stream()
             .map(JURISDICTION_CODES::get)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<String> retrieveTypeOfClaimsCodes(Et1CaseData data) {
@@ -87,7 +86,7 @@ public class JurisdictionCodesMapper {
         }
         return data.getTypesOfClaim().stream()
             .map(JURISDICTION_CODES::get)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private JurCodesTypeItem toJurCodesTypeItem(String jurCodeValue) {
